fixed theming, flicker

--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -46,7 +46,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   margin: 0;
   padding: 0;
-  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 /* Layout */
@@ -1031,4 +1030,9 @@ body blockquote {
 
 [data-theme="dark"] .nav-list li.nav-category:before {
   background-color: var(--border-color);
-} 
+}
+
+
+html {
+  background-color: var(--bg-color);
+}
